[gd_scene load_steps=2 format=3 uid="uid://d22fdji8t8srt"]

[ext_resource type="Script" path="res://scripts/ui/chest_ui.gd" id="1_la3nj"]

[node name="Chest" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_la3nj")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1600, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="PlayerInvHolder" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "<Q
R>"

[node name="ScrollContainer2" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="ChestInvHolder" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ScrollContainer2"]
layout_mode = 2
columns = 5
